[gd_scene load_steps=3 format=3 uid="uid://cl42fmt8tpyji"]

[ext_resource type="FontFile" uid="uid://dxc71cs4m0d58" path="res://fonts/Xolonium-Regular.ttf" id="1_2vvjq"]
[ext_resource type="Script" path="res://hud.gd" id="1_aaec2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_aaec2")

[node name="QuestionLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -144.0
offset_right = -8.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 24
text = "Q: What planet is between Venus and Mars?"
horizontal_alignment = 1

[node name="AnswerTextEdit" type="TextEdit" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -80.0
offset_right = 240.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 24
placeholder_text = "E____"

[node name="SubmitButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -80.0
offset_right = -176.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 24
text = "Submit"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -246.0
offset_right = -16.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 24
text = "Message"
horizontal_alignment = 1

[node name="TeamBlueLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 32
text = "Blue"

[node name="TeamRedLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -26.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2vvjq")
theme_override_font_sizes/font_size = 32
text = "Red"
